--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,7 @@
 
       <div class="profile">
         <img src="images/pic-1.jpg" class="image" alt="" />
-        <h3 class="name">Hariom Singh</h3>
+        <h3 class="name">Parul Verma</h3>
         <p class="role">student</p>
         <a href="profile.html" class="btn">view profile</a>
       </div>
@@ -92,7 +92,7 @@
       <div class="info">
         <div class="user">
           <img src="images/pic-1.jpg" alt="" />
-          <h3>Hariom Singh</h3>
+          <h3>Parul Verma</h3>
           <p>Student</p>
           <a href="update.html" class="inline-btn">update profile</a>
         </div>
