--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
         <div class="profile">
           <img src="images/pic-1.jpg" class="image" alt="" />
-          <h3 class="name">Hariom Singh</h3>
+          <h3 class="name">Parul Vermas</h3>
           <p class="role">student</p>
           <a href="profile.html" class="btn">view profile</a>
           <div class="flex-btn">
@@ -60,7 +60,7 @@
 
       <div class="profile">
         <img src="images/pic-1.jpg" class="image" alt="" />
-        <h3 class="name">Hariom Singh</h3>
+        <h3 class="name">Parul Verma</h3>
         <p class="role">student</p>
         <a href="profile.html" class="btn">view profile</a>
       </div>
@@ -284,7 +284,7 @@
 
     <footer class="footer">
       &copy; copyright @ 2023 by
-      <span>Hariom, Gaurav, Fazal and Dipendra </span> | all rights reserved!
+      <span>Parul Verma </span> | all rights reserved!
     </footer>
 
     <!-- custom js file link  -->
